Fix scrollbar issues on firefox

--- a/styles/sass/_components.hero-hero-aside.scss
+++ b/styles/sass/_components.hero-hero-aside.scss
@@ -9,7 +9,7 @@
     .hero-aside__side {
       margin-right: 0;
       margin-left: 40px;
-      padding: 0 0 20px 20px;
+      padding: 0 0 0 0px;
       border-bottom: 2px dashed $color-dark-tertiary;
       border-top: 2px dashed $color-dark-tertiary;
     }
@@ -35,6 +35,7 @@
 
     .latest-news {
       height: 400px;
+      position: relative;
     }
   }
 
